cs2303/assignment1/compiling_error.txt
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c:19:1: error: unknown type name ‘bool’; did you mean ‘_Bool’?
 bool isLeapYear(int year) {
 ^~~~
 _Bool
